# LArGeant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
analysis/: americium.py  optical_photons.py  production_cuts.py  sipm.py  test.py  thermal_electrons.py
include/: Core.hh  LArGeantActionInitialization.hh  LArGeantAnalysis.hh  LArGeantArgon.hh  LArGeantArgonCube.hh  LArGeantArgonCubeDetector.hh  LArGeantArgonCubeSensitiveDetector.hh  LArGeantCore.hh  LArGeantDetectorConstruction.hh  LArGeantEventAction.hh  LArGeantGenerator.hh  LArGeantHit.hh  LArGeantNeutronHPPhysics.hh  LArGeantPhysicsList.hh  LArGeantPrimaryGeneratorAction.hh  LArGeantRunAction.hh  LArGeantSensitiveDetector.hh  LArGeantSteppingAction.hh
include/actions/: ActionInitialization.hh  EventAction.hh  LArGeantActionInitialization.hh  LArGeantEventAction.hh  LArGeantRunAction.hh  LArGeantStackingAction.hh  LArGeantSteppingAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
include/analysis/: Analysis.hh  EnergyDeposit.hh  Hit.hh  OpticalPhotonData.hh  Particle.hh  ThermalElectronData.hh  Trajectory.hh
include/argon/: Argon.hh  LArGeantArgon.hh
include/detector/: ArgonCube.hh  ArgonCubeDetector2.hh  ArgonCubeSiPMSensitiveDetector.hh  Detector.hh  DetectorComponent.hh  DetectorConstruction.hh  LArGeantArgonCube.hh  LArGeantArgonCubeDetector.hh  LArGeantArgonCubeSiPMSensitiveDetector.hh  LArGeantArgonSphere.hh  SensitiveDetector.hh
include/detector/argon_cube/: ArgonCubeActiveVolume.hh  ArgonCubeDetector.hh  ArgonCubeXZSiPM.hh
include/detector/argon_sphere/: ArgonSphere.hh
include/generator/: LArGeantPrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh
include/manager/: EventManager.hh  EventManagerMessenger.hh
include/materials/: Xenon.hh
include/messenger/: LArGeantNeutronHPMessenger.hh
include/nest/: LArGeantLArNEST.hh  LArNESTInterface.hh  NESTInterface.hh
include/physics/: ElectricField.hh  ElectricFieldMessenger.hh  LArGeantNeutronHPPhysics.hh  LArGeantPhysicsList.hh  NeutronHPPhysics.hh  PhysicsList.hh  ScintillationMessenger.hh  ScintillationPhysics.hh  ScintillationProcess.hh  ThermalElectron.hh
include/sources/: Americium.hh  LArGeantAmericium.hh
macros/: init_vis.mac  run_test.mac  scandet.mac  vis.mac
scripts/: install_geant4.sh  install_largeant.sh  prepare_geant4_installation.sh
src/: Core.cxx  LArGeantActionInitialization.cxx  LArGeantArgon.cxx  LArGeantArgonCubeDetector.cxx  LArGeantArgonCubeSensitiveDetector.cxx  LArGeantArgonCubeSiPMSensitiveDetector.cxx  LArGeantCore.cxx  LArGeantDetectorConstruction.cxx  LArGeantEventAction.cxx  LArGeantGenerator.cxx  LArGeantHit.cxx  LArGeantNeutronHPPhysics.cxx  LArGeantPhysicsList.cxx  LArGeantPrimaryGeneratorAction.cxx  LArGeantRunAction.cxx  LArGeantSensitiveDetector.cxx  LArGeantSteppingAction.cxx  bindings.cxx  main.cc
src/actions/: ActionInitialization.cxx  EventAction.cxx  LArGeantActionInitialization.cxx  LArGeantEventAction.cxx  LArGeantRunAction.cxx  LArGeantStackingAction.cxx  LArGeantSteppingAction.cxx  RunAction.cxx  StackingAction.cxx  SteppingAction.cxx  TrackingAction.cxx
src/analysis/: Analysis.cxx  EnergyDeposit.cxx  Hit.cxx  LArGeantAnalysis.cxx  Particle.cxx  Trajectory.cxx
src/argon/: Argon.cxx  LArGeantArgon.cxx
src/detector/: ArgonCube.cxx  ArgonCubeDetector2.cxx  ArgonCubeSiPMSensitiveDetector.cxx  ArgonSphere.cxx  Detector.cxx  DetectorComponent.cxx  DetectorConstruction.cxx  LArGeantArgonCube.cxx  LArGeantArgonCubeDetector.cxx  LArGeantArgonCubeSiPMSensitiveDetector.cxx  LArGeantArgonSphere.cxx  SensitiveDetector.cxx
src/detector/argon_cube/: ArgonCubeActiveVolume.cxx  ArgonCubeDetector.cxx  ArgonCubeXZSiPM.cxx
src/generator/: LArGeantPrimaryGeneratorAction.cxx  PrimaryGeneratorAction.cxx
src/manager/: EventManager.cxx  EventManagerMessenger.cxx
src/materials/: Xenon.cxx
src/messenger/: LArGeantNeutronHPMessenger.cxx
src/nest/: LArGeantLArNEST.cxx  LArNESTInterface.cxx  NESTInterface.cxx
src/physics/: ElectricField.cxx  ElectricFieldMessenger.cxx  LArGeantPhysicsList.cxx  NeutronHPPhysics.cxx  PhysicsList.cxx  ScintillationMessenger.cxx  ScintillationPhysics.cxx  ScintillationProcess.cxx  ThermalElectron.cxx
src/programs/: ArgonCube.cc  ArgonSphere.cc  DetectorTest.cc  ProgramTemplate.cc
